<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello world!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="myGUI">Look at my GUI</string>
    <string name="clickHere">CLICK HERE</string>
    <string name="checkThis">Check this out!</string>
    <string name="switchOn">Switch on/off</string>
    <string name="hintText">Type here</string>
    <string name="toast_message">Here is more information</string>
    <string name="undo">Undo</string>

    <string name="checkOn">The checkbox is on </string>
    <string name="checkOff">The checkbox is off </string>


    <string name="switchIsOn">The switch is on </string>
    <string name="switchIsOff">The switch is off </string>

    <string name="emailText">Enter your email address</string>
    <string name="emailHint">Type email here</string>
    <string name="passwordText">Type your password</string>
    <string name="loginBtn">LOGIN</string>
    <string name="yourProfile">Your profile</string>
    <string name="yourName">Your name:</string>
    <string name="nameHint">Enter your name</string>
    <string name="yourEmail">Enter your email</string>
    <string name="yourPicture">Your picture:</string>
    <string name="clickTheButton">Click the button above to take a picture</string>
    <string name="goToChat">Go to chat</string>
    <string name="send">SEND</string>
    <string name="receive">RECEIVE</string>
    <string name="typeHere">type here</string>
    <string name="goToWeather">Weather Forecast</string>
    <string name="currTemperature">Current Temperature:</string>
    <string name="minTemperature">"Min Temperature: "</string>
    <string name="maxTemperature">Max Temperature</string>
    <string name="UV">"UV: "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Message Here</string>
    <string name="idEquals">ID=</string>
    <string name="fragmentIsSend">Is a Send Message</string>
    <string name="fragmentHideBtn">HIDE</string>

</resources>