<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ProfileActivity"
android:orientation="vertical"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp"
    >

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/yourProfile"
    />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/yourName"
    />


<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/nameHint"
    android:id="@+id/nameText"

    android:nextFocusDown="@id/emailText"
    android:nextFocusUp="@id/nameText"
    android:nextFocusRight="@id/emailText"
    android:nextFocusLeft="@id/loginBtn"
    />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/yourEmail"
    />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textEmailAddress"
    android:id="@+id/emailText"
    android:hint="@string/emailHint"

    android:nextFocusDown="@id/myPictureBtn"
    android:nextFocusUp="@id/nameText"
    android:nextFocusRight="@id/myPictureBtn"
    android:nextFocusLeft="@id/nameText"
    />



<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/yourPicture"
    />


<ImageButton
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:src="@android:drawable/picture_frame"
    android:id="@+id/myPictureBtn"

    android:nextFocusDown="@id/goToChat"
    android:nextFocusUp="@id/emailText"
    android:nextFocusRight="@id/goToChat"
    android:nextFocusLeft="@id/emailText"
    />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/clickTheButton"
    />


<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/goToChat"
    android:text="@string/goToChat"

    android:nextFocusDown="@id/goToWeather"
    android:nextFocusUp="@id/myPictureBtn"
    android:nextFocusRight="@id/goToWeather"
    android:nextFocusLeft="@id/myPictureBtn"
    />

<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/goToWeather"
    android:text="@string/goToWeather"

    android:nextFocusDown="@id/goToWeather"
    android:nextFocusUp="@id/goToChat"
    android:nextFocusRight="@id/goToWeather"
    android:nextFocusLeft="@id/goToChat"
    />

</LinearLayout>