<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:layout_column="2"
    android:layout_row="4"
    android:orientation="horizontal"
    >


    <TextView
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:text="@string/myGUI"
        android:textSize="30dp" />

    <Button
        android:text="@string/clickHere"
        android:id="@+id/myBtn"
        android:layout_column="1"
        android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"

            />

        <CheckBox
            android:layout_columnWeight="1"
        android:text="@string/checkThis"
        android:id="@+id/myCheck"
        android:layout_column="2"
        android:layout_row="2"
        android:layout_gravity="fill"
            />


    <ImageButton
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:src="@drawable/flag" />

    <Switch
        android:layout_columnWeight="1"
                android:text="@string/switchOn"
                android:id="@+id/mySwitch"
                android:layout_column="2"
                android:layout_row="3"
                android:layout_gravity="top"
                />


        <EditText
            android:inputType="textPersonName|textCapWords"
            android:hint="@string/hintText"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"

            />
</GridLayout>