<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >


    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/myGUI"
        android:id="@+id/myTextView"
        android:textSize="30dp" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:text="@string/clickHere"
        android:layout_below="@+id/myTextView"
        android:id="@+id/myBtn"

            />

        <CheckBox
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/checkThis"
        android:id="@+id/myCheck"
        android:layout_toRightOf="@+id/myBtn"
        android:layout_below="@+id/myTextView"
            />


    <ImageButton
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/flag"
        android:id="@+id/myImageButton"
        android:layout_below="@id/myBtn"
        />

    <Switch
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/switchOn"
        android:id="@+id/mySwitch"
        android:layout_below="@+id/myBtn"
        android:layout_toRightOf="@+id/myImageButton"
                />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            android:hint="@string/hintText"
            android:layout_below="@id/myImageButton"
            />
</RelativeLayout>