<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment"
            android:id="@+id/fragmentHello"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idEquals"
            android:layout_below="@+id/fragmentHello"
            android:id="@+id/fragmentID"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragmentID"
            android:text="@string/fragmentIsSend"
            android:id="@+id/fragmentIsSend" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fragmentHideBtn"
            android:text="@string/fragmentHideBtn"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>

</FrameLayout>