<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"

    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp"

    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emailText"
         />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:id="@+id/emailText"

        android:nextFocusDown="@id/password"
        android:nextFocusUp="@id/emailText"
        android:nextFocusRight="@id/password"
        android:nextFocusLeft="@id/password"



    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordText"


        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/password"


        android:nextFocusDown="@id/loginBtn"
        android:nextFocusUp="@id/emailText"
        android:nextFocusRight="@id/loginBtn"
        android:nextFocusLeft="@id/emailText"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginBtn"
        android:id="@+id/loginBtn"

        android:nextFocusDown="@id/loginBtn"
        android:nextFocusUp="@id/password"
        android:nextFocusRight="@id/loginBtn"
        android:nextFocusLeft="@id/password"

        />


</LinearLayout>